--- a/css/app.css
+++ b/css/app.css
@@ -179,3 +179,136 @@ div#formHeaderContainer {
         font-size: 24px;
     }
 }
+
+
+#question2 p.title {
+    line-height: 120% !important;
+    font-size: 38px !important;
+}
+
+@media print, screen and (max-width: 1450px) {
+    /*
+        .smallText {
+            font-size: 14px !important;
+        }
+    */
+    .text {
+        font-size: 17px !important;
+    }
+    .title {
+        font-size: 36px !important;
+    }
+
+    .padding30 {
+        padding: 20px !important;
+    }
+    .smallText {
+        font-size: 14px !important;
+    }
+    .bigTitle {
+        font-size: 36px !important;
+        line-height: 115% !important;
+    }
+    .semiTitle {
+        font-size: 26px !important;
+    }
+}
+
+
+@media print, screen and (max-width: 1000px) {
+    /*
+        .smallText {
+            font-size: 14px !important;
+        }
+    */
+    .text {
+        font-size: 16px !important;
+    }
+    .title {
+        font-size: 34px !important;
+    }
+
+    .padding30 {
+        padding: 20px !important;
+    }
+    .smallText {
+        font-size: 12px !important;
+    }
+    .bigTitle {
+        font-size: 34px !important;
+        line-height: 115% !important;
+    }
+    .semiTitle {
+        font-size: 24px !important;
+    }
+}
+
+@media print, screen and (max-width: 40em) {
+    .hPaddding50 {
+        padding: 20px 0 !important;
+    }
+    .w150 {
+        width: 100px !important;
+        max-width: 100px !important;
+    }
+    .bigTitle {
+        font-size: 30px !important;
+        line-height: 110% !important;
+        margin-top: 20px !important;
+    }
+    .text {
+        font-size: 16px !important;
+        line-height: 120%;
+    }
+    .title {
+        line-height: 120% !important;
+        font-size: 28px !important;
+    }
+    #question2 p.title {
+        line-height: 120% !important;
+        font-size: 24px !important;
+    }
+    .smallText {
+        font-size: 14px !important;
+    }
+    .semiTitle {
+        font-size: 20px !important;
+        line-height: 110% !important;
+    }
+    #nextQuestion {
+        margin-top: 10px !important;
+    }
+    #nextQuestion>p {
+        font-size: 14px;
+    }
+}
+
+p {
+    padding: 3px;
+}
+
+
+.semiTitle {
+    font-family: Muli, Arial;
+}
+
+.text {
+    font-family: Open Sans, Arial;
+}
+
+input {
+    font-family: Open Sans, Arial;
+}
+
+.smallText {
+    font-family: Open Sans, Arial;
+}
+
+.title {
+    font-family: Muli, Arial;
+    font-weight: 900;
+}
+
+#question2>div.hPaddding50 {
+    padding: 10px 0 !important;
+}
