[*] fix le problème des retours (mise en page)

--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,7 @@
 div#header {
     background-image: url("../assets/bg1.png");
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
 }
 
@@ -10,6 +11,11 @@ div#formHeaderContainer>div {
 
 div#formHeaderContainer {
     padding: 20% 30px 30px 30px;
+}
+
+::placeholder {
+    color: #001941;
+    font-family: "Muli", Arial;
 }
 
 .orangeButton {
@@ -134,10 +140,17 @@ div#formHeaderContainer {
 }
 
 .social i {
-    margin-top: 10px;
     font-size: 24px;
     margin: 5px;
     color: #fff;
+}
+
+.social .ttTxt, .social .fbTxt {
+    background: #fdfdfd90;
+    line-height: 50px;
+    margin: 5px;
+    height: 50px;
+    vertical-align: center;
 }
 
 .socialContainer {
@@ -151,10 +164,14 @@ div#formHeaderContainer {
     position: absolute;
     bottom: 30px !important;
     right: 70px;
+    border-radius: 25px;
+    z-index: 1;
+    margin-right: -66px !important;
+    padding: 0 60px 0 20px;
 }
 
 .fbTxt {
-    bottom: 55px !important;
+    bottom: 60px !important;
     right: 70px;
 }
 
@@ -192,6 +209,16 @@ div#formHeaderContainer {
             font-size: 14px !important;
         }
     */
+    #answerArrow>img {
+        padding: 10px !important;
+    }
+    .pourquoi {
+        font-size: 36px !important;
+        line-height: 50% !important;
+    }
+    div#formHeaderContainer {
+        padding: 30px 30px 30px 30px;
+    }
     .text {
         font-size: 17px !important;
     }
@@ -206,11 +233,12 @@ div#formHeaderContainer {
         font-size: 14px !important;
     }
     .bigTitle {
-        font-size: 36px !important;
-        line-height: 115% !important;
+        font-size: 32px !important;
+        line-height: 110% !important;
     }
     .semiTitle {
         font-size: 26px !important;
+        line-height: 110% !important;
     }
 }
 
