[*] mise en page générale

--- a/css/app.css
+++ b/css/app.css
@@ -17,6 +17,10 @@ div#formHeaderContainer {
     color: #001941;
     font-family: "Muli", Arial;
 }
+::selection {
+    color: #001941;
+    font-family: "Muli", Arial;
+}
 input::placeholder {
     color: #001941;
     font-family: "Muli", Arial;
