--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,10 @@ div#formHeaderContainer {
     padding: 0 30px 30px 30px;
 }
 
+.largeLeftMargin10 {
+    margin-left: 10px;
+}
+
 ::placeholder {
     color: #001941;
     font-family: "Muli", Arial;
@@ -256,6 +260,10 @@ select::placeholder {
         font-size: 26px !important;
         line-height: 110% !important;
     }
+    .smallPaddingTop50 {
+        padding-top: 30px !important;
+    }
+
 }
 
 
@@ -285,9 +293,22 @@ select::placeholder {
     .semiTitle {
         font-size: 24px !important;
     }
+    .smallPaddingTop50 {
+        padding-top: 40px !important;
+    }
+
 }
 
 @media print, screen and (max-width: 40em) {
+    p {
+        padding-left: 10px !important;
+    }
+    .smallPaddingTop50 {
+        padding-top: 50px !important;
+    }
+    .largeLeftMargin10 {
+        margin-left: 0 !important;
+    }
     .hPaddding50 {
         padding: 20px 0 !important;
     }
@@ -296,7 +317,7 @@ select::placeholder {
         max-width: 100px !important;
     }
     .bigTitle {
-        font-size: 30px !important;
+        font-size: 24px !important;
         line-height: 110% !important;
         margin-top: 20px !important;
     }
