--- a/css/app.css
+++ b/css/app.css
@@ -214,8 +214,15 @@ select option {
     right: 70px;
 }
 
+#why {
+    padding-top: 100px;
+}
+
 
 @media print, screen and (max-width: 40em) {
+    #why {
+        padding-top: 20px;
+    }
     #questionText {
         font-size: 24px;
     }
@@ -237,12 +244,24 @@ select option {
     font-size: 38px !important;
 }
 
+
+ #check {
+     top: 0; position: fixed; width: 100% !important;
+ }
 @media print, screen and (max-width: 1450px) {
     /*
         .smallText {
             font-size: 14px !important;
         }
     */
+
+    .hMargin100 {
+        margin: 30px 0 !important;
+    }
+    #why {
+        padding-top: 60px;
+    }
+
     #answerArrow>img {
         padding: 10px !important;
     }
@@ -287,6 +306,10 @@ select option {
             font-size: 14px !important;
         }
     */
+    #why {
+        padding-top: 40px;
+    }
+
     .text {
         font-size: 16px !important;
     }
@@ -325,6 +348,10 @@ select option {
     }
     .hPadding50 {
         padding: 20px 0 !important;
+    }
+
+    #check {
+        top: 0; position: absolute; width: 100%;
     }
     .w150 {
         width: 100px !important;
