--- a/css/app.css
+++ b/css/app.css
@@ -142,6 +142,12 @@ select option {
     background-size: cover;
 }
 
+#question4 {
+    background-image: url("../assets/bGQ3.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .reveal h4, .reveal h3, .reveal ul, td, table {
     padding-bottom: 10px;
 }
