--- a/css/app.css
+++ b/css/app.css
@@ -564,7 +564,7 @@ select, input {
     }
 
     #answer2Text {
-        margin-top: 30px !important;
+        margin-top: 100px !important;
     }
 
 }
@@ -635,6 +635,7 @@ p.checkbox {
 }
 
 #answer2Text {
+    margin-top: 50px;
     line-height: 2rem;
     font-size: 2rem;
 }
